--- a/di/css/media.css
+++ b/di/css/media.css
@@ -19,12 +19,12 @@
     width: 360px;
   }
   /* line 17, media.less */
-  section.block14 .wrapper .photo-container {
+  section.block15 .wrapper .photo-container {
     width: 420px;
   }
   /* line 20, media.less */
   section.block16 .wrapper .photo-container {
-    width: 450px;
+    width: 390px;
   }
 }
 @media screen and (max-width: 1366px) {
@@ -77,115 +77,156 @@
 }
 @media screen and (max-width: 1280px) {
   /* line 69, media.less */
+  div.header .block-left .text {
+    width: 80%;
+  }
+  /* line 72, media.less */
+  div.header .block-left .text ul li {
+    margin-bottom: 30px;
+  }
+  /* line 75, media.less */
   section.block13 .wrapper .photo-container {
     width: 400px;
   }
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1144px) {
   /* line 83, media.less */
+  div.header .block-left .text {
+    width: 80%;
+    padding-right: 0px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  /* line 92, media.less */
   div.header .block-left .text {
     width: 90%;
   }
 }
+@media screen and (max-height: 1024px) {
+  /* line 100, media.less */
+  div.header .block-left .text {
+    width: 80%;
+  }
+  /* line 103, media.less */
+  div.header .block-left .text ul li {
+    margin-bottom: 30px;
+  }
+  /* line 106, media.less */
+  div.header .block-right .text .icon {
+    padding-top: 40px;
+  }
+  /* line 109, media.less */
+  div.header .block-right .text .icon-bottom {
+    padding-top: 80px;
+  }
+}
 @media screen and (max-height: 900px) {
-  /* line 89, media.less */
+  /* line 116, media.less */
   div.header .block-left .text {
     width: 70%;
     padding-top: 120px;
     padding-right: 80px;
   }
-  /* line 94, media.less */
+  /* line 121, media.less */
   div.header .block-right .text {
     padding-top: 120px;
     padding-left: 120px;
   }
-  /* line 98, media.less */
+  /* line 125, media.less */
   section.block13 .wrapper .photo-container {
     width: 440px;
   }
-  /* line 101, media.less */
+  /* line 128, media.less */
   section.block14 .wrapper .photo-container {
     width: 360px;
   }
-  /* line 104, media.less */
+  /* line 131, media.less */
   section.block15 .wrapper .photo-container {
     width: 420px;
   }
-  /* line 107, media.less */
+  /* line 134, media.less */
   section.block16 .wrapper .photo-container {
-    width: 350px;
+    width: 390px;
   }
 }
 @media screen and (max-height: 800px) {
-  /* line 114, media.less */
+  /* line 141, media.less */
+  div.header .block-right .text h5 {
+    padding-bottom: 15px;
+  }
+  /* line 144, media.less */
   div.header .block-left .text ul li {
     margin-bottom: 0px;
   }
-  /* line 118, media.less */
+  /* line 148, media.less */
   div.header .block-right .text .icon {
-    padding-top: 40px;
+    padding: 5px 0;
   }
-  /* line 122, media.less */
+  /* line 152, media.less */
   section.block12 .wrapper h3 {
     padding-bottom: 0;
   }
-  /* line 125, media.less */
+  /* line 155, media.less */
   section.block12 .wrapper .item {
     height: 200px;
     margin-bottom: 40px;
   }
-  /* line 129, media.less */
+  /* line 159, media.less */
   div.header .block-left .text {
     width: 60%;
     padding-right: 50px;
   }
-  /* line 133, media.less */
+  /* line 163, media.less */
   div.header .block-right .text {
     padding-top: 90px;
     padding-left: 80px;
   }
-  /* line 137, media.less */
-  div.header .block-right .text .icon {
-    padding-top: 20px;
-  }
-  /* line 140, media.less */
+  /* line 167, media.less */
   div.header .block-left .text ul li {
     margin-bottom: 10px;
   }
-  /* line 143, media.less */
+  /* line 170, media.less */
   section.block12 .wrapper .item {
     margin-bottom: 30px;
   }
-  /* line 146, media.less */
+  /* line 173, media.less */
   section.block12 .wrapper h3 {
     padding-bottom: 20px;
   }
-  /* line 149, media.less */
+  /* line 176, media.less */
   section.block13 .wrapper .photo-container {
     width: 340px;
   }
-  /* line 152, media.less */
+  /* line 179, media.less */
   section.block14 .wrapper .photo-container {
     width: 290px;
   }
+  /* line 182, media.less */
+  section.block15 .wrapper .photo-container {
+    width: 420px;
+  }
+  /* line 185, media.less */
+  section.block16 .wrapper .photo-container {
+    width: 390px;
+  }
 }
 @media screen and (max-height: 760px) {
-  /* line 160, media.less */
+  /* line 193, media.less */
   div.header .block-left .text {
-    padding-top: 90px;
+    padding-top: 75px;
     width: 70%;
     padding-right: 0px;
   }
-  /* line 165, media.less */
+  /* line 198, media.less */
   div.header .block-right .text {
-    padding-top: 110px;
+    padding-top: 80px;
     padding-left: 80px;
   }
-  /* line 169, media.less */
+  /* line 202, media.less */
   div.header .block-right .text .icon {
     padding-top: 20;
   }
-  /* line 172, media.less */
+  /* line 205, media.less */
   div.header .block-right .text .icon-bottom {
     padding-top: 15px;
   }
