--- a/di/less/media.less
+++ b/di/less/media.less
@@ -14,11 +14,11 @@
 	section.block14 .wrapper .photo-container{
 		width: 360px;
 	}
-	section.block14 .wrapper .photo-container{
+	section.block15 .wrapper .photo-container{
 		width: 420px;
 	}
 	section.block16 .wrapper .photo-container{
-		width: 450px;
+		width: 390px;
 	}
 }
 
@@ -66,6 +66,12 @@
 
 
 @media screen and (max-width: 1280px){
+	div.header .block-left .text{
+		width: 80%;
+	}
+	div.header .block-left .text ul li{
+		margin-bottom: 30px;
+	}
 	section.block13 .wrapper .photo-container{
 		width: 400px;
 	}
@@ -74,7 +80,10 @@
 
 
 @media screen and (max-width: 1144px){
-	
+	div.header .block-left .text{
+		width: 80%;
+ 		padding-right: 0px;
+	}
 }
 
 
@@ -84,6 +93,24 @@
 		width: 90%;
 	}
 }
+
+
+
+@media screen and (max-height: 1024px){
+	div.header .block-left .text{
+		width: 80%;
+	}
+	div.header .block-left .text ul li{
+		margin-bottom: 30px;
+	}
+	div.header .block-right .text .icon{
+		padding-top: 40px;
+	}
+	div.header .block-right .text .icon-bottom{
+		padding-top: 80px;
+	}
+}
+
 
 @media screen and (max-height: 900px){
 	div.header .block-left .text{
@@ -105,18 +132,21 @@
 		width: 420px;
 	}
 	section.block16 .wrapper .photo-container{
-		width: 350px;
+		width: 390px;
 	}
 }
 
 
 @media screen and (max-height: 800px){
+	div.header .block-right .text h5{
+		padding-bottom: 15px;
+	}
 	div.header .block-left .text ul li{
 		margin-bottom: 0px;
 	}
 	div.header .block-right .text{
 		.icon{
-			padding-top: 40px;
+			padding: 5px 0;
 		}
 	}
 	section.block12 .wrapper h3{
@@ -134,9 +164,6 @@
 		padding-top: 90px;
 		padding-left: 80px;
 	}
-	div.header .block-right .text .icon{
-		  padding-top: 20px;
-	}
 	div.header .block-left .text ul li{
 		margin-bottom: 10px;
 	}
@@ -152,18 +179,24 @@
 	section.block14 .wrapper .photo-container{
 		width: 290px;
 	}
+	section.block15 .wrapper .photo-container{
+		width: 420px;
+	}
+	section.block16 .wrapper .photo-container{
+		width: 390px;
+	}
 }
 
 
 
 @media screen and (max-height: 760px){
 	div.header .block-left .text{
-		padding-top: 90px;
+		padding-top: 75px;
 		width: 70%;
 		padding-right: 0px;
 	}
 	div.header .block-right .text {
-		padding-top: 110px;
+		padding-top: 80px;
 		padding-left: 80px;
 	}
 	div.header .block-right .text .icon{
