--- a/di/less/media.less
+++ b/di/less/media.less
@@ -205,5 +205,21 @@
 	div.header .block-right .text .icon-bottom{
 		padding-top: 15px;
 	}
+	section.block12 .wrapper .item p.slogan{
+		margin: 5px;
+	}
+	section.block12 .wrapper .item{
+		margin-bottom: 15px;
+ 		padding-bottom: 25px;
+	}
+	section.block12 .wrapper h3{
+		  padding-top: 60px;
+	}
+	section.block15 .wrapper .photo-container{
+		width: 315px;
+	}
+	section.block16 .wrapper .photo-container{
+		width: 320px;
+	}
 	
 }
