--- a/di/less/styles.less
+++ b/di/less/styles.less
@@ -111,7 +111,7 @@ a.sign-up{
 	position: fixed;
 	top:0;
 	width:100%;
-	height:50px;
+	height:10%;
 	z-index: 1;
 	.fixed-menu{
 		float: right;
@@ -226,6 +226,7 @@ div.header{
 				text-transform: uppercase;
 				margin: 0;
 				padding-bottom: 30px;
+				line-height: 150%;
 			}
 			.icon{
 				font-family: Font Awesome;
@@ -436,6 +437,10 @@ section.block5{
 			margin: 0;
 			margin-bottom: 30px;
 		}
+		span.bold{
+			font-weight: 600;
+			font-size: 40px;
+		}
 		.video{
 			width: 620px;
 			margin: auto;
@@ -642,11 +647,14 @@ section.block9{
 section.block10{
 	background: url('../images/bg-block10.jpg') no-repeat center center;
 	background-size:cover;
+	padding-top: 1px;
 	.wrapper{
 		width: 960px;
 		margin: auto;
-		padding-top: 380px;
-		padding-bottom: 90px;
+		height: 170px;
+		top: 50%;
+		margin-top: -85px;
+		position: relative;
 		h1{
 			color: #ffffff;
 			font-size: 45px;
@@ -663,12 +671,7 @@ section.block10{
 			line-height: 37px;
 			text-align: center;
 			margin: 0;
-		}
-		.icon{
-			margin:auto;
-			width: 55px;
-			padding-top: 220px;
-		}
+		}		
 	}
 }
 section.block11{
