--- a/di/less/media.less
+++ b/di/less/media.less
@@ -221,5 +221,12 @@
 	section.block16 .wrapper .photo-container{
 		width: 320px;
 	}
+	div.header .block-right .text .icon{
+		  font-size: 38px;
+	}
+	div.header .block-left .text p{
+		margin-top: 20px;
+  		margin-bottom: 20px;
+	}
 	
 }
