--- a/di/less/styles.less
+++ b/di/less/styles.less
@@ -66,7 +66,7 @@ table{
 		tr{
 			th{
 				color:  #582257;
-				font-size: 18px; /* Приближение из-за подстановки шрифтов */
+				font-size: 18px;
 				font-weight: 600;
 				text-align: center;
 				text-transform: uppercase;
@@ -78,7 +78,7 @@ table{
 		tr{
 			td{
 				color:  #8b7f8d;
-				font-size: 18px;
+				font-size: 17px;
 				text-align: center;
 				padding: 10px 0;
 			}
@@ -86,7 +86,7 @@ table{
 	}
 }
 a.sign-up{
-	width: 250px;
+	width: 200px;
 	margin:20px auto;
 	background: #a550a2;
 	text-decoration: none;
@@ -835,12 +835,16 @@ section.block13{
 			table{
 				width: 100%;
 				margin-top: 30px;
-				td{
-					width: 33%;
+				th{
+					width: 25%;
 				}
-			}
-			a.sign-up{
-				margin-top: 40px;
+				td{
+					width: 25%;
+					a.sign-up{
+						margin-top: 10px;
+
+					}
+				}
 			}
 		}
 	}
@@ -935,12 +939,17 @@ section.block14{
 			table{
 				width: 100%;
 				margin-top: 30px;
-				td{
-					width: 33%;
+				th{
+					width: 25%;
 				}
-			}
-			a.sign-up{
-				margin-top: 40px;
+				td{
+					width: 25%;
+					line-height: 150%;
+					a.sign-up{
+						margin-top: 10px;
+
+					}
+				}
 			}
 		}
 	}
@@ -1030,12 +1039,17 @@ section.block15{
 			table{
 				width: 100%;
 				margin-top: 30px;
-				td{
-					width: 33%;
+				th{
+					width: 25%;
 				}
-			}
-			a.sign-up{
-				margin-top: 40px;
+				td{
+					width: 25%;
+					line-height: 150%;
+					a.sign-up{
+						margin-top: 10px;
+
+					}
+				}
 			}
 		}
 	}
@@ -1147,12 +1161,17 @@ section.block16{
 			table{
 				width: 100%;
 				margin-top: 30px;
-				td{
-					width: 33%;
+				th{
+					width: 25%;
 				}
-			}
-			a.sign-up{
-				margin-top: 40px;
+				td{
+					width: 25%;
+					line-height: 150%;
+					a.sign-up{
+						margin-top: 10px;
+
+					}
+				}
 			}
 		}
 	}
