--- a/consult/less/global.less
+++ b/consult/less/global.less
@@ -460,3 +460,13 @@ header.header {
         }
     }
 }
+.new{
+    .indicator{
+        position: absolute;
+        width: 12px;
+        height: 12px;
+        background: url('../images/interface/new-message-icon.png') center center no-repeat;
+        display: block;
+        z-index: 1;
+    }
+}
