--- a/consult/less/page_question_list.less
+++ b/consult/less/page_question_list.less
@@ -17,6 +17,10 @@ body.page-question-list{
 					-moz-box-sizing:border-box;
 					padding:10px 20px;
 					cursor: pointer;
+					.indicator{
+						top: 22px;
+						left: 5px;
+					}
 					.photo-container{
 						float: left;
 						width: 35px;
@@ -121,6 +125,10 @@ body.page-question-list{
 					box-sizing:border-box;
 					-moz-box-sizing:border-box;
 					padding:10px 0;
+					.indicator{
+						top: 54px;
+						left: 13px;
+					}
 					.photo-container{
 						float: left;
 						width: 35px;
